# massa-mola

./: .gitignore  ArduinoWrite.py  CMakeLists.txt  README.md  motor.py  sdkconfig  srcipt.py
Beta/src/: main.cpp
main/: CMakeLists.txt  main.cpp
main/includes/motor_driver/: motor_driver.cpp  motor_driver.h
main/includes/sensor_driver/: sensor_driver.cpp  sensor_driver.h
main/includes/serial_driver/: serial_driver.cpp  serial_driver.h
main/includes/utils/: utils.h
massa-mola/: platformio.ini
massa-mola/include/: header.h
massa-mola/src/: main.cpp  trail.cpp
old/: platformio.ini
old/src/: main.cpp
trilho/: platformio.ini
trilho/.pio/libdeps/uno/Adafruit_VL53L0X/: .piopm
trilho/include/: header.h
trilho/src/: main.cpp
